@@ -49,13 +49,18 @@ Encoding(x) <- value
   do not \emph{preserve} the encoding, but if they know the input
   encoding and that the string has been successfully re-encoded to the
   current encoding, they mark the output with the latter (if it is
-  \code{"latin1"} or \code{"UTF-8"}).  However, as from \R 2.7.0
-  \code{\link{substr}} does preserve the encoding, and
+  \code{"latin1"} or \code{"UTF-8"}).
+
+  As from \R 2.7.0 \code{\link{substr}} does preserve the encoding, and
   \code{\link{chartr}}, \code{\link{tolower}} and \code{\link{toupper}}
-  preserve UTF-8 encoding on systems with Unicode wide characters.
-  With their \code{fixed} and \code{perl} options,
-  \code{\link{strsplit}}, \code{\link{sub}} and \code{gsub} will give a
-  UTF-8 result if any of the inputs are UTF-8.
+  preserve UTF-8 encoding on systems with Unicode wide characters. With
+  their \code{fixed} and \code{perl} options, \code{\link{strsplit}},
+  \code{\link{sub}} and \code{gsub} will give a UTF-8 result if any of
+  the inputs are UTF-8.
+
+  As from \R 2.8.0 \code{\link{paste}} and \code{\link{sprintf}} will
+  return a UTF-8 encoded element is any of the inputs to that element
+  are UTF-8.
 }
 \value{
   A character vector.
