@@ -1,6 +1,6 @@
 % File src/library/base/man/formatc.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2007 R Core Development Team
+% Copyright 1995-2008 R Core Development Team
 % Distributed under GPL 2 or later
 
 \name{formatC}
@@ -46,11 +46,14 @@ prettyNum(x, big.mark = "",   big.interval = 3,
     otherwise to \code{digits + 1}.  \code{width = 0} will use
     \code{width = digits}, \code{width < 0} means left
     justify the number in this field (equivalent to \code{flag ="-"}).
-    If necessary, the result will have more characters than \code{width}.}
+    If necessary, the result will have more characters than
+    \code{width}.  For character data this is interpreted in characters
+    (not bytes nor display width).
+  }
 
   \item{format}{equal to \code{"d"}  (for integers), \code{"f"},
     \code{"e"}, \code{"E"}, \code{"g"}, \code{"G"}, \code{"fg"} (for
-    reals), or \code{"s"} (for strings). Default is \code{"d"} for
+    reals), or \code{"s"} (for strings).  Default is \code{"d"} for
     integers, \code{"g"} for reals.
 
     \code{"f"} gives numbers in the usual
@@ -104,10 +107,11 @@ prettyNum(x, big.mark = "",   big.interval = 3,
   current locale's encoding.
   Unlike \code{\link{format}}, each number is formatted individually.
   Looping over each element of \code{x}, the C function
-  \code{sprintf(\dots)} is called (inside the C function \code{str_signif}).
+  \code{sprintf(\dots)} is called for numeric inputs (inside the C
+  function \code{str_signif}).
 
-  \code{formatC}: for character \code{x}, do
-  simple (left or right) padding with white space.
+  \code{formatC}: for character \code{x}, do simple (left or right)
+  padding with white space.
 }
 \details{
   If you set \code{format} it overrides the setting of \code{mode}, so
