@@ -109,11 +109,17 @@ gettextf(fmt, \dots, domain = NULL)
 
   There is a limit of 8192 bytes on elements of \code{fmt} and also on
   strings included by a \code{\%s} conversion specification.
+
+  Field widths and precisions of \code{\%s} conversions are interpreted
+  as bytes, not characters, as described in the C standard.
 }
 
 \value{
-  A character vector of length that of the longest input, in the current
-  locale's encoding.
+  A character vector of length that of the longest input.  If any
+  element of \code{fmt} or any character argument is declared as UTF-8,
+  the element of the result will be in UTF-8 and have the encoding
+  declared as UTF-8.  Otherwise it will be in the current locale's
+  encoding.
 }
 
 \references{
